overlapping undo redo fixed | undo redo using stack

--- a/client/canvas/canvas.css
+++ b/client/canvas/canvas.css
@@ -18,7 +18,6 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgb(245, 255, 252);
   border-radius: 16px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 16px;
@@ -29,9 +28,7 @@ button {
   border: 2px solid blue;
   border-radius: 8px;
   background: white;
-  cursor: crosshair;
-  /* width: 800px;
-  height: 450px; */
+  cursor: url('/client/assets/brush.png') 10 40, auto;
 }
 
 #roomID {
@@ -55,9 +52,10 @@ button {
 
 #players {
   margin-right: 20px;
-  border: 2px solid blue;
+  border: 1px solid blue;
   padding: 10px;
   border-radius: 8px;
+  background-color: white;
 }
 
 #playerList{
